--- a/Components/App.razor
+++ b/Components/App.razor
@@ -15,6 +15,8 @@
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
+
+    <script src="bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
