--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,13 +1,23 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
+
     <div class="sidebar">
-        <NavMenu />
+        <div class="container-fluid pt-3">
+            <nav class="flex-column">
+
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
+                        <span class="bi bi-box-arrow-left" aria-hidden="true"></span> Salir
+                    </NavLink>
+                </div>
+
+            </nav>
+        </div>
     </div>
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
         </div>
 
         <article class="content px-4">
